[metadata]
name = topic-db
version = 2.0.0
author = Brett Alistair Kromkamp
author_email = brettkromkamp@gmail.com
description = TopicDB is a topic map-based graph store (using SQLite for persistence)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brettkromkamp/topic-db
project_urls =
    Bug Tracker = https://github.com/brettkromkamp/topic-db/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.7
install_requires =
    python-slugify>=5.0.2
    pytest>=7.0.1
    typed-tree>=1.0.6
